--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
     <title>Teckelines</title>
 </head>
 
@@ -38,7 +39,7 @@
     <main class="portada">
         <h1>Bienvenidos a nuestro mundo...</h1>
         <div class="imagen-con-texto">
-            <img src=".//img/portada-provisoria-001.png" alt="Foto portada Teckelines">
+            <img src="./img/portada-provisoria-001.png" alt="Foto portada Teckelines">
             <p>La felicidad cuando se comparte, se multiplica</p>
         </div>
         <div class="boton-productos">
