--- a/pages/productos.html
+++ b/pages/productos.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="./../css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+        <!-- <link rel="stylesheet" href="./../css/styles.css"> -->
     <link rel="stylesheet" href="./../css/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -38,7 +39,7 @@
         </nav>
     </header>
     <main>
-        <h1>Productos hechos con amor</h1>
+        <h1 class="animate__animated animate__pulse">Productos hechos con amor</h1>
         <div class="catalogo-general">
             <div class="catalogo">
                 <div id="carouselExample" class="carousel slide">
@@ -159,7 +160,7 @@
         </div>
     </main>
     <footer>
-        <a href="https://www.instagram.com/teckel_carl/" target="_blank">Seguinos en nuestras redes... <img
+        <a href="https://www.instagram.com/teckelinesok/" target="_blank">Seguinos en nuestras redes... <img
                 src="./../img/logo-instagram.svg" alt="Acceso al Instagram de Teckelines"></a>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
