Start ignoring styles.css

--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
     <main class="portada">
         <h1 class="animate__animated animate__pulse">Bienvenidos a nuestro mundo...</h1>
         <div class="imagen-con-texto">
-            <img src="./img/portada-provisoria-001.png" alt="Foto portada Teckelines">
+            <img class="portada-responsive" src="./img/portada-provisoria-001.png" alt="Foto portada Teckelines">
+            <img class="portada-mobile" src="./img/Fotos-varias-002.jpg" alt="Foto portada Teckelines mobile">
             <p>La felicidad cuando se comparte, se multiplica</p>
         </div>
         <div class="boton-productos">
