--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -6,14 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-        <!-- <link rel="stylesheet" href="./../css/styles.css"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <!-- <link rel="stylesheet" href="./../css/styles.css"> -->
     <link rel="stylesheet" href="./../css/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
     <title>Teckelines - Contacto</title>
+    <meta name="description" content="Contactate con nosotros! Hacénos un pedido o mandános un mensaje. Queremos 
+    saber de vos">
+    <meta name="keywords" content="amigurumis, perro salchicha, teckel, regalos, muñeco de apego, regalos niños, 
+    regalos recién nacido, Contacto">
+    <meta property="og:image" href="./img/portada-provisoria-001.png">
 </head>
 
 <body>
