--- a/pages/fotos.html
+++ b/pages/fotos.html
@@ -14,6 +14,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
     <title>Teckelines - Fotos</title>
+    <meta name="description" content="Algunas Teckefotos, nos divertimos sacando fotos, mandános la tuya!">
+    <meta name="keywords" content="amigurumis, perro salchicha, teckel, regalos, muñeco de apego, regalos niños, 
+    regalos recién nacido, Fotos, Nuestras fotos">
+    <meta property="og:image" content="./img/portada-provisoria-001.png">
 </head>
 
 <body>
