--- a/pages/productos.html
+++ b/pages/productos.html
@@ -14,6 +14,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
     <title>Teckelines - Productos</title>
+    <meta name="description" content="Amigurumis perros salchicha o teckel para acompañarte a dormir, para regalar,
+    para decorar. No te quedes sin tu Teckelines">
+    <meta name="keywords" content="amigurumis, perro salchicha, teckel, regalos, muñeco de apego, regalos niños, 
+    regalos recién nacido, productos">
+    <meta property="og:image" content="./img/portada-provisoria-001.png">
 </head>
 
 <body>
