--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -14,6 +14,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
     <title>Teckelines - Nosotros</title>
+    <meta name="description" content="Te contamos un poco de nosotros y cómo empezó nuestra historia">
+    <meta name="keywords" content="amigurumis, perro salchicha, teckel, regalos, muñeco de apego, regalos niños, 
+    regalos recién nacido, Nosotros, Quienes somos">
+    <meta property="og:image" content="./img/portada-provisoria-001.png">
 </head>
 
 <body>
