--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     para decorar. No te quedes sin tu Teckelines">
     <meta name="keywords" content="amigurumis, perro salchicha, teckel, regalos, muñeco de apego, regalos niños, 
     regalos recién nacido, Inicio">
-    <meta property="og:image" href="./img/portada-provisoria-001.png">
+    <meta property="og:image" content="./img/portada-provisoria-001.png">
 </head>
 
 <body>
