--- a/pages/productos.html
+++ b/pages/productos.html
@@ -18,7 +18,7 @@
     para decorar. No te quedes sin tu Teckelines">
     <meta name="keywords" content="amigurumis, perro salchicha, teckel, regalos, muñeco de apego, regalos niños, 
     regalos recién nacido, productos">
-    <meta property="og:image" content="./img/portada-provisoria-001.png">
+    <meta property="og:image" content="https://teckelines.netlify.app/img/portada-provisoria-001.png">
 </head>
 
 <body>
