--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -17,7 +17,7 @@
     <meta name="description" content="Te contamos un poco de nosotros y cómo empezó nuestra historia">
     <meta name="keywords" content="amigurumis, perro salchicha, teckel, regalos, muñeco de apego, regalos niños, 
     regalos recién nacido, Nosotros, Quienes somos">
-    <meta property="og:image" content="./img/portada-provisoria-001.png">
+    <meta property="og:image" content="https://teckelines.netlify.app/img/portada-provisoria-001.png">
 </head>
 
 <body>
