--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -18,7 +18,7 @@
     saber de vos">
     <meta name="keywords" content="amigurumis, perro salchicha, teckel, regalos, muñeco de apego, regalos niños, 
     regalos recién nacido, Contacto">
-    <meta property="og:image" content="./img/portada-provisoria-001.png">
+    <meta property="og:image" content="https://teckelines.netlify.app/img/portada-provisoria-001.png">
 </head>
 
 <body>
