--- a/pages/fotos.html
+++ b/pages/fotos.html
@@ -17,7 +17,7 @@
     <meta name="description" content="Algunas Teckefotos, nos divertimos sacando fotos, mandános la tuya!">
     <meta name="keywords" content="amigurumis, perro salchicha, teckel, regalos, muñeco de apego, regalos niños, 
     regalos recién nacido, Fotos, Nuestras fotos">
-    <meta property="og:image" content="./img/portada-provisoria-001.png">
+    <meta property="og:image" content="https://teckelines.netlify.app/img/portada-provisoria-001.png">
 </head>
 
 <body>
