--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -46,7 +46,7 @@
     <main>
         <h1 class="animate__animated animate__pulse">Dejanos tu mensaje...</h1>
         <div class="contacto">
-            <form class="form">
+            <form class="form" method="POST" action="https://formsubmit.co/barberisro@gmail.com" enctype="multipart/form-data">
                 <div>
                     <label for="nombre">Nombre:</label>
                     <input type="text" placeholder="Ingresá tu nombre" id="nombre">
