--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -53,7 +53,7 @@
                 </div>
                 <div>
                     <label for="email">E-mail:</label>
-                    <input type="email" placeholder="Ingresá tu E-mail" id="email">
+                    <input type="email" name="email" placeholder="Ingresá tu E-mail" id="email">
                 </div>
                 <div>
                     <label for="mensaje">Mensaje:</label>
@@ -62,6 +62,7 @@
                 </div>
                 <div class="enviar">
                     <input type="submit" name="Enviar..." id="enviar">
+                    <input type="hidden" name="_next" value="https://teckelines.netlify.app/">
                 </div>
             </form>
             <div>
