--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -46,7 +46,7 @@
     <main>
         <h1 class="animate__animated animate__pulse">Dejanos tu mensaje...</h1>
         <div class="contacto">
-            <form class="form" method="POST" action="https://formsubmit.co/barberisro@gmail.com" enctype="multipart/form-data">
+            <form class="form" method="POST" action="https://formsubmit.co/sofiarivolta@yahoo.com.ar" enctype="multipart/form-data">
                 <div>
                     <label for="nombre">Nombre:</label>
                     <input type="text" placeholder="Ingresá tu nombre" id="nombre">
@@ -75,6 +75,7 @@
     <footer>
         <a href="https://www.instagram.com/teckelinesok/" target="_blank">Seguinos en nuestras redes... <img
                 src="./../img/logo-instagram.svg" alt="Acceso al Instagram de Teckelines"></a>
+        <p>© 2024 Teckelines, todos los derechos reservados. <br> Created by Romina B</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
