--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
     <footer>
         <a href="https://www.instagram.com/teckelinesok/" target="_blank">Seguinos en nuestras redes... <img
                 src="./img/logo-instagram.svg" alt="Acceso al Instagram de Teckelines"></a>
+        <p>© 2024 Teckelines, todos los derechos reservados. <br> Created by Romina B</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
